--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
     <div id="quiz-container">
         <div id="question"></div>
-        <button id="option1">Option 1</button>
-        <button id="option2">Option 2</button>
+        <input type="radio" id="option1" name="option">
+        <label for="option1" id="label1">Option 1</label><br>
+        <input type="radio" id="option2" name="option">
+        <label for="option2" id="label2">Option 2</label><br>
+        <button id="submit">Check Answer</button>
         <div id="feedback"></div>
     </div>
     <script src="script.js"></script>
