--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <button id="submit">Check Answer</button>
         <div id="feedback"></div>
     </div>
+
+    <div id="team-options" style="display:none;">
+        <p>Select a team to score a point:</p>
+        <button onclick="logForTeam('Red')">Red Team</button>
+        <button onclick="logForTeam('White')">White Team</button>
+        <button onclick="logForTeam('Blue')">Blue Team</button>
+        <button onclick="logForTeam('Crimson')">Crimson Team</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
