--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         <div id="feedback"></div>
     </div>
 
+
+
     <div id="team-options" style="display:none;">
-        <p>Select a team to score a point:</p>
-        <button onclick="logForTeam('Red')">Red Team</button>
-        <button onclick="logForTeam('White')">White Team</button>
-        <button onclick="logForTeam('Blue')">Blue Team</button>
-        <button onclick="logForTeam('Crimson')">Crimson Team</button>
+    <p>Select a team to score a point:</p>
+    <button class="team-button" data-team="Red">Red Team</button>
+    <button class="team-button" data-team="White">White Team</button>
+    <button class="team-button" data-team="Blue">Blue Team</button>
+    <button class="team-button" data-team="Crimson">Crimson Team</button>
     </div>
+
 
     <script src="script.js"></script>
 </body>
