--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <!-- Add these lines in the <head> section of your HTML file -->
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,17 +20,15 @@
         <div id="feedback"></div>
     </div>
 
-
-
     <div id="team-options" style="display:none;">
-    <p>Select a team to score a point:</p>
-    <button class="team-button" data-team="Red">Red Team</button>
-    <button class="team-button" data-team="White">White Team</button>
-    <button class="team-button" data-team="Blue">Blue Team</button>
-    <button class="team-button" data-team="Crimson">Crimson Team</button>
+        <p>Select a team to score a point:</p>
+        <button class="team-button" data-team="Red">Red Team</button>
+        <button class="team-button" data-team="White">White Team</button>
+        <button class="team-button" data-team="Blue">Blue Team</button>
+        <button class="team-button" data-team="Crimson">Crimson Team</button>
     </div>
 
-
-    <script src="script.js"></script>
+    <!-- Include your script with type="module" -->
+    <script type="module" src="script.js"></script>
 </body>
 </html>
