--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         <button class="team-button" data-team="Crimson">Crimson Team</button>
     </div>
 
+ <div id="scores">
+    <div id="score-red">Red Team: <span></span></div>
+    <div id="score-white">White Team: <span></span></div>
+    <div id="score-blue">Blue Team: <span></span></div>
+    <div id="score-crimson">Crimson Team: <span></span></div>
+    <div id="total-score">Total Score: <span></span></div>
+</div>
+
+
     <!-- Your script file -->
     <script src="script.js"></script>
 </body>
