--- a/score.html
+++ b/score.html
@@ -8,35 +8,22 @@
             background-color: #eee; /* Background of the container */
             border: 1px solid #000; /* Border around the container */
             position: relative;
-            margin-bottom: 20px; /* Space for number line */
+            margin-bottom: 10px; /* Space for number line */
         }
 
         .score-bar {
-            height: 20px; /* Height of the score bar */
+            height: 15px; /* Smaller height of the score bar */
             background-color: blue; /* Color of the score bar (leader: blue) */
             width: 0%; /* Initial width of the score bar */
-        }
-
-        .tic {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 1px;
-            background-color: #000;
         }
 
         .number-line {
             position: relative;
             width: 100%;
-            height: 20px; /* Height of the number line */
-            font-size: 10px; /* Size of numbers */
-            line-height: 20px; /* Align numbers vertically */
-            text-align: center;
-        }
-
-        .number {
-            position: absolute;
-            bottom: 0;
+            height: 15px; /* Smaller height of the number line */
+            font-size: 8px; /* Smaller size of numbers */
+            line-height: 15px; /* Align numbers vertically */
+            text-align: right; /* Align the number to the right */
         }
 
         .score-display {
@@ -59,14 +46,9 @@
 <body>
     <div class="score-bar-container">
         <div class="score-bar" id="scoreBar"></div>
-        <!-- Tic Marks -->
-        <div class="tic" style="left: 50%;"></div>
-        <div class="tic" style="right: 0;"></div>
     </div>
     <div class="number-line">
-        <!-- Number Line Increments -->
-        <div class="number" style="left: 50%;">500</div>
-        <div class="number" style="right: 0%;">1000</div>
+        1000 <!-- Only number 1000 at the end -->
     </div>
     <div class="score-display" id="scoreDisplay"></div>
     <a href="https://dormantone.github.io/collectivelearning/" target="_blank" class="ensmarten-button">Ensmarten</a>
