--- a/score.html
+++ b/score.html
@@ -3,6 +3,11 @@
 <head>
     <title>Score Bar</title>
     <style>
+        body {
+            color: white; /* Set text color to white for the entire body */
+            background-color: #333; /* Added a background color for better visibility of white text */
+        }
+
         .score-bar-container {
             width: 100%; /* Container width */
             background-color: #eee; /* Background of the container */
