--- a/score.html
+++ b/score.html
@@ -5,7 +5,7 @@
     <style>
         body {
             color: white; /* Set text color to white for the entire body */
-            background-color: #333; /* Added a background color for better visibility of white text */
+            background-color: #4b7a74; /* Added a background color for better visibility of white text */
         }
 
         .score-bar-container {
