--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             font-weight: bold;
             margin-bottom: 20px; /* Space between the scores and the question */
         }
+
+        #experimental-system-notice {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+}
+
     </style>
 </head>
 <body>
@@ -68,6 +77,11 @@
         <button class="team-button" data-team="Crimson">Crimson Team</button>
     </div>
 
+    <!-- New div for the message -->
+<div id="experimental-system-notice">
+    <p>This is a strictly experimental system to deliver microknowledge that is specific to documentation and later perhaps other relevant things. It is for demonstration purposes only at this time. The information still needs to be vetted for accuracy.</p>
+</div>
+    
     <!-- Your script file -->
     <script src="script.js"></script>
 </body>
