--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 </head>
 <body>
     <div id="scores">
+         <h2>Collective Learning</h2> <!-- Heading for Collective Learning -->
         <div id="score-red">Red Team: <span></span></div>
         <div id="score-white">White Team: <span></span></div>
         <div id="score-blue">Blue Team: <span></span></div>
