--- a/score.html
+++ b/score.html
@@ -26,17 +26,19 @@
         .neural-network {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 3px; /* Increased from 2px to 3px */
-            width: 75px; /* Increased from 50px */
-            height: 75px; /* Increased from 50px */
-            margin-right: 15px; /* Increased from 10px */
+            gap: 2px;
+            width: 50px; /* 3 * 8px + 2 * 2px gap */
+            height: 50px; /* As above to make it square */
+            margin-right: 10px;
+            align-items: center;
         }
 
         .neuron {
-            width: 12px; /* Increased from 8px */
-            height: 12px; /* Increased from 8px */
-            border: 1.5px solid; /* Increased from 1px */
+            width: 8px;
+            height: 8px;
+            border: 1px solid;
             border-radius: 50%;
+            background-color: transparent;
         }
 
         .score-bar-container {
@@ -70,9 +72,8 @@
 
         .ensmarten-button {
             display: inline-block;
-            margin-left: 15px; /* Increased from 10px */
-            padding: 7.5px 15px; /* Increased from 5px 10px */
-            font-size: 24px; /* Increased for better visibility */
+            margin-left: 10px;
+            padding: 5px 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
