--- a/score.html
+++ b/score.html
@@ -93,6 +93,16 @@
                 transform: translateY(2px);
             }
 
+        /* Responsive adjustments for smaller devices */
+        @media (max-width: 600px) {
+            .main-container {
+                width: 95%;
+            }
+
+            .neural-network {
+                margin-right: 5px;
+            }
+        }
 
     </style>
 </head>
