--- a/score.html
+++ b/score.html
@@ -45,11 +45,11 @@
             width: 100%; /* Adjusting width to account for the neural-network width */
             background-color: #eee;
             border: 1px solid #000;
-            margin: 10px 0;
+            margin: 4px 0;
         }
 
         .score-bar {
-            height: 25px;
+            height: 18px;
             background-color: blue;
             width: 0%;
         }
@@ -58,7 +58,7 @@
             position: relative;
             width: 100%; /* Adjusting width to account for the neural-network width */
             font-size: 8px;
-            line-height: 15px;
+            line-height: 10px;
             text-align: right;
         }
 
@@ -67,19 +67,20 @@
             align-items: center;
             justify-content: space-between;
             width: 100%;
-            margin-top: 5px;
+            margin-top: 3px;
         }
 
         .ensmarten-button {
             display: inline-block;
-            margin-left: 10px;
-            padding: 5px 10px;
+            margin-left: 6px;
+            padding: 3px 6px;
             background-color: #4CAF50;
             color: white;
             border: none;
             border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
+            font-size: 12px; /* 40% smaller than 20px */
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             transition: box-shadow 0.3s ease, transform 0.3s ease;
         }
