--- a/score.html
+++ b/score.html
@@ -62,17 +62,21 @@
             text-align: right;
         }
 
-        .score-display {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-            margin-top: 3px;
-        }
+.score-display {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; /* Aligns items to the left */
+    width: 100%;
+    margin-top: 3px;
+    font-size: 12px; /* Adjust the font size as needed to make it appear smaller */
+    padding: 5px; /* Optional: Add padding to adjust the spacing */
+}
+
 
         .ensmarten-button {
             display: inline-block;
             margin-left: 6px;
+            margin-right: 6px;
             padding: 3px 6px;
             background-color: #4CAF50;
             color: white;
